basic gallery site

--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -2,7 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+body {
+  background-color: #FAF9F6;
+}
+
+header {
+  background-color: #FAF9F6;
+}
+
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -30,4 +38,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
